kube/prestashop-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o kube/prestashop-deployment.yaml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql

spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: mysql
status:
  loadBalancer: { }

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o kube/prestashop-deployment.yaml
    kompose.version: 1.30.0 (9d8dcb518)
    external-dns.alpha.kubernetes.io/hostname: prestashop.${NODE_ENV}.tiltup.io
    service.beta.kubernetes.io/aws-load-balancer-type: alb
    kubernetes.io/ingress.class: alb
  creationTimestamp: null
  labels:
    io.kompose.service: prestashop
  name: prestashop
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: prestashop
status:
  loadBalancer: { }

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prestashop
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: k8s-alb-${NODE_ENV}-external
    alb.ingress.kubernetes.io/group.name: k8s-alb-${NODE_ENV}-external
    alb.ingress.kubernetes.io/group.order: '100'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:237649144029:certificate/d05269b2-ad5b-446a-9dd6-dc8925d5970b
    alb.ingress.kubernetes.io/actions.port: >
      {"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"prestashop","ServicePort":"80","Weight":100}]}}

spec:
  ingressClassName: alb
  rules:
    - host: prestashop.${NODE_ENV}.tiltup.io
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: port
                port:
                  name: use-annotation

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o kube/prestashop-deployment.yaml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql

spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o kube/prestashop-deployment.yaml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/prestashop-network: "true"
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: prestashop
            - name: MYSQL_ROOT_PASSWORD
              value: admin
          image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              hostPort: 3306
              protocol: TCP
          resources: { }
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: dbdata
      restartPolicy: Always
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
status: { }

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o kube/prestashop-deployment.yaml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: prestashop
  name: prestashop
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prestashop
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o kube/prestashop-deployment.yaml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/prestashop-network: "true"
        io.kompose.service: prestashop
    spec:
      containers:
        - env:
            - name: DB_PASSWD
              value: admin
            - name: DB_SERVER
              value: mysql
            - name: PS_DEV_MODE
              value: "1"
            - name: PS_DOMAIN
              value: prestashop.${NODE_ENV}.tiltup.io
            - name: PS_FOLDER_INSTALL
              value: install-dev
            - name: PS_INSTALL_AUTO
              value: "1"
          image: prestashop/prestashop:1.7.8.9-7.4-apache
          name: prestashop
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources: { }
          volumeMounts:
            - mountPath: /var/www/html
              name: psdata
            - mountPath: /var/www/html/modules/tiltupcryptopaymentsmodule
              name: prestashop-claim1
      restartPolicy: Always
      volumes:
        - name: psdata
          persistentVolumeClaim:
            claimName: psdata
#        - name: prestashop-claim1
#          persistentVolumeClaim:
#            claimName: prestashop-claim1
status: { }
